packages/yew-router-macro/tests/routable_derive/unbound-fields-fail.stderr
error: unbound field
 --> $DIR/unbound-fields-fail.rs:4:9
  |
4 |     One(u32),
  |         ^^^
