packages/yew-router-macro/tests/routable_derive/unbound-fields-fail.rs
#[derive(yew_router::Routable)]
enum Routes {
    #[at("/one/:two")]
    One(u32),
}

fn main() {}
